# SupportBot

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_11_29_2152-fb152428a709_support_ticket_model.py  2023_11_29_2231-665b686e24af_support_ticket_close_requests_counter.py  2023_11_29_2240-5f2f86e2697d_support_ticket_close_requests_counter.py  2023_11_30_1504-b5c8445bb566_ticketmessages_and_m2m_relationshiop_.py  2023_11_30_1521-ca114cd7d1c4_messages_id_changed_to_message_id.py  2023_11_30_1554-a74ffabc16c0_ticketmessages_changes.py  2023_11_30_1954-d274c924f3d5_ticketmessages_changes.py  2023_12_01_0113-7df3dbb9cfe1_ticketmessages_changes.py  2023_12_02_0259-33a1fc5307cf_ticketmessages_changes.py  2023_12_02_1606-9a997ea48487_user_model.py  2023_12_02_2151-77f8c4a5ec7b_support_ticket_changes.py  2023_12_02_2154-e27df088124c_support_ticket_changes.py  2023_12_03_2052-c0e85cd118e4_allowed_user.py
src/: dataclasses_.py  handlers.py  loader.py  main.py  models.py  services.py  states.py  support_middleware.py
src/core/: config.py
src/utils/: keyboards.py  tokens.py
src/utils/misc/: bot_commands.py
